--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,112 @@
   padding: 0;
 }
 
+body {
+  box-sizing: border-box;
+  min-height: 100vh;
+}
+
+
+/* Header Section */
+
+header { 
+  max-height: 8vh;
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: auto 1fr max-content;
+  margin: 0 5vh 0 5vh;
+  column-gap: 10px;
+  border-bottom: 2px solid gray;
+  margin-bottom: 1ch;
+}
+
+.logo img { 
+  max-height: 40px;
+}
+.user-avatar img { 
+  max-height: 40px;
+}
+
+.question-search {
+  border-radius: 5px;
+}
+
+.main_header_searchbar {
+  display: flex;
+  justify-content: center;
+}
+
+.main_header_searchbar input {
+  min-width: 60vh;
+  max-width: 70vh;
+  height: 3.5vh;
+  font-size: larger;
+  padding-left: 1vh;
+  /* text-shadow: burlywood; */
+  color: blueviolet;
+}
+
 /* 
 .App {
   background-color: #b4b7bd;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 } */
 
 
-.main-column-template {
+/* MAIN ROUTER SECTION - rendering  */
+.main-columns-template {
   display: grid;
-  border: 1px solid red;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 300px 1fr 300px;
+  column-gap: 2ch;
+  height: 96vh;
 }
 
+
+
+
+/* Add question form */
+.centering-section { 
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  margin: auto;
+  padding: 30px;
+  max-width: fit-content;
+  border: 2px solid darkgray;
+  border-radius: 15px;
+}
+
+.question-form input {
+  min-width: 30vh;
+  max-width: 40vh;
+  height: 2.5vh;
+  font-size: large;
+  padding-left: 1vh;
+  color: blueviolet;
+  
+}
+
+
+/* Asides */
 .aside {
   display: flex;
+  border-top: 2px solid black;
   min-width: 200px;
-  color: aqua;
+}
+
+.user-profile-section { 
+  /* background-color: blueviolet; */
+  /* border-top: 2px solid black; */
+  border-left: 2px solid black;
+}
+
+.main-dashboard-section { 
+  /* border-top: 2px solid black; */
+  border-right: 2px solid black;
+  /* background-color: red; */
+
 }
