--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,6 @@ header {
   height: 3.5vh;
   font-size: larger;
   padding-left: 1vh;
-  /* text-shadow: burlywood; */
   color: blueviolet;
 }
 
@@ -89,7 +88,16 @@ header {
   font-size: large;
   padding-left: 1vh;
   color: blueviolet;
-  
+}
+
+
+.input-title input{ 
+  min-width: 60vh;
+  /* max-width: 50vh; */
+  height: 3.5vh;
+  font-size: larger;
+  padding-left: 1vh;
+  /* color: blueviolet; */
 }
 
 
@@ -111,4 +119,18 @@ header {
   border-right: 2px solid black;
   /* background-color: red; */
 
+}
+
+
+
+.tag-element{
+  display: flex;
+  flex: auto;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+li{
+  list-style-type: none;
 }
