--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* { 
+* {
   margin: 0;
   padding: 0;
 }
@@ -8,10 +8,9 @@ body {
   min-height: 100vh;
 }
 
-
 /* Header Section */
 
-header { 
+header {
   max-height: 8vh;
   align-items: center;
   justify-content: center;
@@ -23,10 +22,10 @@ header {
   margin-bottom: 1ch;
 }
 
-.logo img { 
+.logo img {
   max-height: 40px;
 }
-.user-avatar img { 
+.user-avatar img {
   max-height: 40px;
 }
 
@@ -58,7 +57,6 @@ header {
   color: white;
 } */
 
-
 /* MAIN ROUTER SECTION - rendering  */
 .main-columns-template {
   display: grid;
@@ -67,11 +65,8 @@ header {
   height: 96vh;
 }
 
-
-
-
 /* Add question form */
-.centering-section { 
+.centering-section {
   display: grid;
   align-items: center;
   justify-items: center;
@@ -89,9 +84,7 @@ header {
   font-size: large;
   padding-left: 1vh;
   color: blueviolet;
-  
 }
-
 
 /* Asides */
 .aside {
@@ -100,15 +93,23 @@ header {
   min-width: 200px;
 }
 
-.user-profile-section { 
+.user-profile-section {
   /* background-color: blueviolet; */
   /* border-top: 2px solid black; */
   border-left: 2px solid black;
+  display: grid;
+  grid-template-rows: 200px 1fr;
 }
 
-.main-dashboard-section { 
+.main-dashboard-section {
   /* border-top: 2px solid black; */
   border-right: 2px solid black;
   /* background-color: red; */
+}
 
+.user-profile-section {
+  border: 2px solid red;
+  margin: 8px;
+  padding: 4px;
+  list-style: none;
 }
